--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,10 +80,11 @@ body {
 .homeServicesDiv {
   grid-column: 4 / span 1;
   grid-row: first / span 2;
-  background-color: #061a1b;
-  background-image: url('https://i.imgur.com/y2qqP5l.jpg');
+  background-color:#e59188;
+  background-image: url('https://i.imgur.com/R6lkVTl.png');
   background-repeat: no-repeat;
   background-size: cover;
+  max-height: 100%;
   background-position: center;
   display: flex;
   flex-direction: column;
@@ -104,10 +105,10 @@ body {
 }
 
 .servicesLink {
-  font-family: 'Moon Dance', cursive;
+  font-family: 'amarante', cursive;
   font-size: 50px;
   height: 100%;
-  color: white;
+  color:#f0e6be;
   margin: 0;
   transition: .2s
 }
@@ -115,7 +116,7 @@ body {
 .homeServicesDiv:hover .servicesLink {
   letter-spacing: 8px;
   transition: .2s;
-  color: #f77c96
+  color: #f0e6be8a;
 }
 
 .homeCardDiv {
@@ -139,8 +140,8 @@ body {
 .homeBookingDiv {
   grid-column: 3 / span 1;
   grid-row: third / span 2;
-  background-color: #061a1b;
-  background-image: url('https://i.imgur.com/OnJwWTy.jpg');
+  background-color:#e59188;
+  background-image: url('https://i.imgur.com/UbksiP0.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -163,10 +164,9 @@ body {
 }
 
 .bookingLink {
-  font-family: 'Moon Dance', cursive;
+  font-family: 'amarante', cursive;
   font-size: 50px;
-  height: 90px;
-  color: white;
+  color:#f0e6be;
   margin: 0;
   transition: .2s
 }
@@ -174,7 +174,7 @@ body {
 .homeBookingDiv:hover .bookingLink {
   letter-spacing: 8px;
   transition: .2s;
-  color: #f77c96
+  color: ##f0e6be8a;
 }
 
 .homeReviewDiv {
