--- a/client/src/App.css
+++ b/client/src/App.css
@@ -547,10 +547,13 @@ body {
 
 /* CARD INFO PAGE */
 
+.cardPagePic {
+  background-image: url("https://i.imgur.com/ZOUwMd5.jpg");
+}
+
 .cardPagePic, .cardPagePic2 {
   grid-column: 1 / span 2;
   grid-row: second / span 3;
-  background-image: url("https://i.imgur.com/ZOUwMd5.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   max-height: 100%;
@@ -659,23 +662,35 @@ body {
   box-sizing: border-box;
 }
 
-.horoscopeDescription {
+.horoscopeSign {
+  font-family: "amarante";
+  color:#f0e6be;
+  font-size: 50px;
+  text-align: center;
+}
+
+.horoscopeDescriptionDiv {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 80%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   transform: translate(-50%, -50%);
   z-index: 4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: .2s;
 }
 
 .horoscopeDescription {
   font-family: "barlow";
   text-align: center;
-  font-size: 30px; 
+  font-size: 25px; 
   color:#f0e6be;
 }
 
@@ -727,7 +742,7 @@ body {
 
 .dailyCardText {
   font-family: "barlow";
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -745,7 +760,7 @@ body {
 
 .dailyCardName {
   font-family: "Amarante";
-  font-size: 70px;
+  font-size: 50px;
   line-height: 50px;
   color:#cd6d59;
   margin: 0;
