--- a/client/src/App.css
+++ b/client/src/App.css
@@ -489,13 +489,13 @@ body {
 .cardsPagePic, .cardsPagePic2 {
   grid-column: 1 / span 2;
   grid-row: second / span 3;
-  /* background-color: #a9bba6; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   max-height: 100%;
-  max-width: 100%
+  max-width: 100%;
+  padding: 20px;
 }
 
 .cardsPagePic {
