made signs page and sign / signinfo components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -498,6 +498,10 @@ body {
   padding: 20px;
 }
 
+.cardsPagePic2 {
+  border-radius: 50px;
+}
+
 .cardsPagePic {
   background-image: url("https://i.imgur.com/ZOUwMd5.jpg");
   background-repeat: no-repeat;
