all signs, routes, usenavigate etc working

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -592,6 +592,12 @@ body {
   line-height: 80px;
 }
 
+.signPageDates {
+  font-family: 'Amarante', cursive;
+  color:#324e5a;
+  text-align: center;
+}
+
 /* CARD INFO PAGE MEDIA QUERY */
 
 @media only screen and (max-width: 1220px) {
