--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 /* HOME GRID LAYOUT */
 body {
-  margin: 0
+  margin: 0;
+  background-color:#324e5a
 }
 
 .homeGrid {
@@ -882,11 +883,17 @@ body {
   object-fit: cover;
 }
 
+.button {
+  padding: 0;
+}
+
 .backButtonContainer {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  background-color:#384d59;
+  text-decoration: none;
 }
 
 .backButton {
@@ -896,11 +903,12 @@ body {
   border: none;
   font-family: 'amarante';
   font-size: 30px;
-  padding: 10px 20px;
+  padding: 5px 20px;
   color:#f0e6be;
   background-color:#384d59;
-  border-radius: 5px;
-  margin: 0 0 20px 0;
+  /* border-radius: 5px; */
+  /* margin: 0 0 20px 0; */
+  text-decoration: none;
 }
 
 .retrogradeAnswer {
