--- a/client/src/App.css
+++ b/client/src/App.css
@@ -390,7 +390,7 @@ body::-webkit-scrollbar {
 .pageInfo {
   grid-column: 3 / span 2;
   grid-row: first / span 4;
-  background-color: white;
+  background-color:#f0e6be;
   overflow-y: auto;
   /* padding: 20px; */
   position: relative;
@@ -1113,7 +1113,7 @@ body::-webkit-scrollbar {
   font-family: "Amarante";
   font-size: 25px;
   /* padding: 20px; */
-  border-radius: 20px;
+  /* border-radius: 20px; */
   transition: .2s;
 }
 
