minor css changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -948,6 +948,10 @@ body::-webkit-scrollbar {
 }
 
 .signButton {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 7em;
   border: none;
