--- a/client/src/App.css
+++ b/client/src/App.css
@@ -791,6 +791,19 @@ body {
   overflow-y: auto
 }
 
+.todaysHoroscope, .moreAbout {
+  text-align: center;
+  font-family: amarante;
+  color:#cd6d59;
+  font-size: 2em;
+  padding: 0;
+  margin: 0;
+}
+
+.todaysHoroscope {
+  padding: 50px 0 0 0
+}
+
 .allCardsCard {
   grid-column: 1 / span 1;
   grid-row: 2 / span 2;
